<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="StationBehaviourState" Id="{ce85cd05-6efc-434a-9ea4-df6144a01750}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE StationBehaviourState :
(
	WaitForMoverEnabled := 0,                                               
	WaitingForStart := 1,
	MovingToStart := 2, 
	MoveToFirstStation := 3,                                 
	MovingToCurrentStation := 4,
	ArrivedAtStation := 5,
	MoverQueueingAtStation := 6,
	WaitingForStationComplete := 7,
	StartingProcess := 8,
	MoverInProcess := 9,
	CheckIfFinalStation := 10,
	MovingToNextStation := 11,
	SequenceError := 99
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>